# 3dverse

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  AUTH_SETUP.md  DOCKER.md  Dockerfile  ENV_SETUP.md  SECURITY_CHECKLIST.md  docker-compose.yml  next.config.cjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
backend/: .env.example  .gitignore  AUTH.md  Cargo.toml  DIESEL_SETUP.md  Dockerfile  README.md  diesel.toml  test_auth.sh
backend/migrations/00000000000000_diesel_initial_setup/: up.sql
backend/migrations/2024-01-01-000000_create_initial_tables/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/auth/: auth_services.rs
backend/src/db/: mod.rs
backend/src/handlers/: login.rs  register.rs  verify.rs
backend/src/models/: mod.rs  models_3d.rs  users.rs
firebase/: fb.js
prisma/: schema.prisma  schema.prisma.backup
prisma/migrations/20241118121329_/: migration.sql
prisma/migrations/20241119151337_token2/: migration.sql
redux/: store.tsx
redux/auth/: authSlice.tsx
scripts/: setup-auth.bat
src/app/: globals.css  layout.tsx  page.tsx
src/app/(auth)/: layout.tsx
src/app/(home)/: layout.tsx  page.tsx
src/app/auth/: layout.tsx
src/app/components/: navbar.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/scripts/: updatetext.py
src/app/unauthorized/: page.tsx
src/components/: BlenderIntro.tsx  Footer.tsx  ReduxProvider.tsx  gradientButton.tsx  navbar.tsx
src/context/: AuthContext.tsx
src/lib/: auth-client.tsx  auth.tsx
src/utils/: react-debug.ts
(+15 files in other folders)
