[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel_migrations = "2.0"

actix-cors = "0.7.1"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.1"
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.10.0"
argon2 = "0.5.2"
rand = "0.9.1"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
futures = "0.3.30"
log = "0.4.20"
